Centralizind objects, fixing alignments...

--- a/public/assets/css/vizion-style.css
+++ b/public/assets/css/vizion-style.css
@@ -2542,5 +2542,9 @@ z-index: -1;}
   display: flow-root;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  /*text-align: center;*/
+}
+
+.force-justify {
+  text-align: justify;
 }
